--- a/views/index.jade
+++ b/views/index.jade
@@ -1,2 +1,12 @@
-h1= title
-p Welcome to #{title}
+!!!
+html
+  head
+    title= title
+    link(rel='stylesheet', href='/stylesheets/style.css')
+  body
+    h1 迷子ナビチャット
+    p
+      | setumeisetumeisetumeisetumeisetumeisetumeisetumeisetumeisetumeisetumei
+      | setumeisetumeisetumei
+      | setumeisetumeisetumeisetumeisetumei
+    a(href='/create') create
