* don't apply void latlng to google map * minor design fix * add username change method

--- a/views/room.jade
+++ b/views/room.jade
@@ -11,11 +11,11 @@ html
     meta(name="apple-mobile-web-app-capable", content="yes")
     meta(name="MobileOptimized", content="320")
   body
+    #map
     #you
       input#name
-      button#rename
+      button#rename rename
     ul#users
-    #map
     button#sendloc sendloc
     #input
       input#text
