Fix canvas resize messed up small images. sigh.

--- a/views/room.jade
+++ b/views/room.jade
@@ -6,10 +6,9 @@ html
     script(src='/socket.io/socket.io.js')
     script(src="http://maps.google.com/maps/api/js?sensor=true")
     script(src='/javascripts/chat.js')
-    script(src='https://raw.github.com/gokercebeci/canvasResize/master/exif.js')
-    script(src='https://raw.github.com/gokercebeci/canvasResize/master/binaryajax.js')
-    script(src='https://raw.github.com/gokercebeci/canvasResize/master/canvasResize.js')
-
+    script(src='/javascripts/exif.js')
+    script(src='/javascripts/binaryajax.js')
+    script(src='/javascripts/canvasResize.js')
     link(rel='stylesheet', href='/stylesheets/style.css')
     meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0')
     meta(name="apple-mobile-web-app-capable", content="yes")
