--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-body, div {
+body, div, ul {
   margin: 0;
   padding: 0;
 }
@@ -11,10 +11,23 @@ body {
 a {
   color: #00B7FF;
 }
+a:hover {
+  cursor: pointer;
+}
 
 #map {
   width: 100%;
   height: 180px;
+}
+
+#info {
+  width: 100%;
+  height: 20px;
+}
+
+.user {
+  display: inline-block;
+  margin: 3px;
 }
 
 .following {
@@ -24,3 +37,34 @@ a {
 .photo {
   width: 256px;
 }
+
+#photo-input {
+  display: none;
+}
+#config {
+  display: none;
+}
+#config-toggle {
+  position: fixed;
+  right: 0;
+  top: 0;
+  background-color: rgba(0,0,0,0.5);
+  color: #fff;
+  padding: 5px;
+}
+
+.user-summary {
+  padding: 2px 2px;
+  background-color: #ace;
+  margin: 0 5px;
+}
+
+#log {
+  min-height: 300px;
+}
+
+.log-item {
+  list-style: none;
+  border-bottom: 1px dotted #ccc;
+}
+
