--- a/views/room.jade
+++ b/views/room.jade
@@ -31,7 +31,8 @@ html
     script
       $(function () {
         var client = new ChatClient({
-          socket: '#{socket}'
+          roomid: '#{roomid}'
+          , socket: '#{socket}'
         });
       });
   footer
