--- a/views/room.jade
+++ b/views/room.jade
@@ -5,10 +5,12 @@ html
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
     script(src='/socket.io/socket.io.js')
     script(src="http://maps.google.com/maps/api/js?sensor=true")
-    script(src='/javascripts/chat.js')
     script(src='/javascripts/exif.js')
     script(src='/javascripts/binaryajax.js')
     script(src='/javascripts/canvasResize.js')
+    script(src='/javascripts/jquery.cookie.js')
+    script(src='/javascripts/chat.js')
+
     link(rel='stylesheet', href='/stylesheets/style.css')
     meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0')
     meta(name="apple-mobile-web-app-capable", content="yes")
