--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -78,3 +78,34 @@ a:hover {
   border-bottom: 1px dotted #ccc;
 }
 
+#draw {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  background-color: #000;
+}
+
+#draw-field {
+  position: relative;
+  width: 100%;
+}
+#canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: 1px solid #0g0;
+  z-index: 2;
+  width: 100%;
+}
+#draw-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: 1px solid #f00;
+  z-index: 1;
+  width: 100%;
+}
+
