Add mailto link to invite

--- a/views/room.jade
+++ b/views/room.jade
@@ -35,6 +35,8 @@ html
           img#twitter-icon
           input#twitter-id
           button#twitter-invite invite
+        p
+          a(href='mailto:?body=' + encodeURIComponent('Could you tell me the way to? ' + roomurl) + '&subject=' + encodeURIComponent('Invitation to maigochat')) Send Invitation via email
     ul#users
     form#textform
       input#text
