Fix config screen styling

--- a/views/room.jade
+++ b/views/room.jade
@@ -18,7 +18,7 @@ html
   body
     #map
     #info
-    #config-toggle config
+    #config-open config
     #config
       form#config-form
         h1 setting
@@ -76,5 +76,5 @@ html
           , socket: '#{socket}'
         });
       });
-  footer
-    a(href="/") backtotop
+    footer
+      a(href="/") backtotop
