--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -44,18 +44,18 @@ a:hover {
 }
 #config {
   display: none;
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   box-sizing: border-box;
   width: 100%;
-  height: 200%;
+  min-height: 120%;
   background: #eee;
   border: 5px solid #ddd;
   padding: 10px;
   z-index: 1000;
 }
-#config-toggle {
+#config-open {
   position: fixed;
   right: 0;
   top: 0;
