--- a/views/room.jade
+++ b/views/room.jade
@@ -16,8 +16,8 @@ html
     meta(name="apple-mobile-web-app-capable", content="yes")
     meta(name="MobileOptimized", content="320")
   body
+    span#info
     #map
-    #info
     #config-open config
     #config
       form#config-form
