Fix footer design

--- a/views/room.jade
+++ b/views/room.jade
@@ -77,4 +77,7 @@ html
         });
       });
     footer
-      a(href="/") backtotop
+      span designed by 
+      a(href="http://blog.aklaswad.com/about/") aklaswad
+      span 
+      a(href="/") back to toppage
