--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -166,3 +166,10 @@ a:hover {
   border: 2px solid #000;
   color: #fff;
 }
+
+footer {
+  font-size: 0.7em;
+  text-align: right;
+  border-top: 1px dotted #ddd;
+  padding: 10px 5px;
+}
