--- a/views/room.jade
+++ b/views/room.jade
@@ -3,7 +3,7 @@ html
   head
     title= title
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
-    script(src='/socket.io/socket.io.js')
+    script(src='http://' + iohost + '/socket.io/socket.io.js')
     script(src="http://maps.google.com/maps/api/js?sensor=true")
     script(src='/javascripts/exif.js')
     script(src='/javascripts/binaryajax.js')
