--- a/views/room.jade
+++ b/views/room.jade
@@ -9,6 +9,7 @@ html
     script(src='/javascripts/binaryajax.js')
     script(src='/javascripts/canvasResize.js')
     script(src='/javascripts/jquery.cookie.js')
+    script(src='/javascripts/moment.min.js')
     script(src='/javascripts/chat.js')
 
     link(rel='stylesheet', href='/stylesheets/style.css')
