Draw on static map

--- a/views/room.jade
+++ b/views/room.jade
@@ -41,6 +41,7 @@ html
           button#twitter-invite invite
         p
           a(href='mailto:?body=' + encodeURIComponent('Could you tell me the way to? ' + roomurl) + '&subject=' + encodeURIComponent('Invitation to maigochat')) Send Invitation via email
+    a#map-draw
     ul#users
     form#textform
       input#text
